--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "react-scripts start",
+    "server": "node src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -60,5 +62,8 @@
   "devDependencies": {
     "@types/react-bootstrap": "^0.32.37",
     "@types/svg-path-parser": "^1.1.6"
+  },
+  "engines": {
+    "node": "22"
   }
 }
