--- a/package.json
+++ b/package.json
@@ -2,36 +2,38 @@
   "name": "jubbly",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
-    "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0",
-    "js-cookie": "^3.0.5",
-    "react": "^19.0.0",
-    "react-bootstrap": "^2.10.6",
-    "react-datepicker": "^7.5.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-minimal-pie-chart": "^9.1.0",
-    "react-router-dom": "^7.0.2",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.14",
+    "@types/js-cookie": "3.0.6",
+    "@types/node": "22.10.5",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "axios": "1.7.9",
+    "body-parser": "2.0.2",
+    "bootstrap": "5.3.3",
+    "cors": "2.8.5",
+    "date-fns": "4.1.0",
+    "express": "5.0.1",
+    "helmet": "8.0.0",
+    "js-cookie": "3.0.5",
+    "react": "19.0.0",
+    "react-big-calendar": "1.17.1",
+    "react-bootstrap": "2.10.7",
+    "react-datepicker": "7.6.0",
+    "react-dom": "19.0.0",
+    "react-icons": "5.4.0",
+    "react-minimal-pie-chart": "9.1.0",
+    "react-router-dom": "7.1.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.8.3",
-    "react-toastify": "^10.0.6",
-    "sass": "^1.82.0",
-    "sqlite3": "^5.1.7",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "react-select": "5.9.0",
+    "react-toastify": "11.0.2",
+    "sass": "1.83.1",
+    "sqlite3": "5.1.7",
+    "typescript": "5.7.2",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
@@ -60,11 +62,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.37",
-    "@types/svg-path-parser": "^1.1.6",
-    "concurrently": "^9.1.0"
-  },
-  "engines": {
-    "node": "22"
+    "@testing-library/react": "^16.1.0",
+    "@types/react-bootstrap": "1.0.1",
+    "@types/svg-path-parser": "1.1.6",
+    "concurrently": "9.1.2"
   }
 }
